Scaled the features and marks the end of data preprocessing

--- a/Breast Cancer Diagnosis.ipynb
+++ b/Breast Cancer Diagnosis.ipynb
@@ -3070,13 +3070,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44959cc0-fb52-4725-b79b-9798263fd930",
+   "metadata": {},
+   "source": [
+    "## Scaling of Freatures"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d669b20-1475-4687-bbcf-5581e9cccca0",
+   "id": "acc696eb-d06e-4373-beb5-6720d8fcd8b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Scaling of Freatures"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = "
    ]
   }
  ],
